# llmcui

./: .coverage  README.md  new  new.pub  pyproject.toml  update.sh
cli/: main.py
cli/commands/: admin.py  banner.py  prompt_builder.py
cli/interactive/: menu.py  post_response.py
core/db/: database.py
core/models/: chat.py  message.py  project.py
core/services/: chat_service.py  llm_service.py  message_service.py  project_service.py  settings_service.py
core/utils/: settings.py
llmcui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
runners/: distill.py
tests/: conftest.py  test_chat_service.py  test_cli.py  test_database.py  test_interactive_menu.py  test_llm_service.py  test_message_service.py  test_post_response.py  test_project_service.py
