[project]
name = "llmcui"
version = "0.1.0"
description = "Project-aware & chat-aware context manager for Simon Willison’s llm CLI tool."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
llmcui = "cli.main:main"
ai = "cli.main:main"

[tool.setuptools]
packages = ["cli", "core"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
