[project]
name = "llmcui"
version = "0.1.0"
description = "Project-aware & chat-aware context manager for Simon Willison’s llm CLI tool."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
ai = "cli.main:main"
llmcui = "cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["llmcui", "cli", "core", "plugins", "runners"]
